# fusionvision-turtlebot3-ws

./: .gitignore
FusionVision/: .gitignore  dowload_dataset.py  fuse_rgbd.py  generate_synthetic_depth.py  train_yolo.py  train_yolo_combined.py  yolo_inference_ros.py
FusionVision/.github/workflows/: deploy-pages.yml
FusionVision/website/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
FusionVision/website/components/: Citation.tsx  Footer.tsx  Header.tsx  Hero.tsx  Pipeline.tsx  Results.tsx  icons.tsx
src/obstacle_avoider/: package.xml  setup.py
src/obstacle_avoider/obstacle_avoider/: avoider_node.py
src/waste_detector/: package.xml  setup.py
src/waste_detector/waste_detector/: waste_detector_node.py  waste_navigator_node.py
