<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoider</name>
  <version>0.0.1</version>
  <description>Desvio de obstáculos com LiDAR</description>
  <maintainer email="lauraluna@todo.todo">lauraluna</maintainer>
  <license>Apache License 2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
